fix alarm / stop listening for units other than minutes; add a/an to getDigits; open links in a new tab, prevent tables from being too wide; change listening duration from voice command, feed duration/volume/voice back into response; add greeting parrot action

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -461,6 +461,8 @@
 			border-spacing: 2px;
 			table-layout: fixed;
 			font-size: 12px;
+			width: auto !important;
+			max-width: inherit !important;
 		}
 
 		.stream-history th {
